--- a/DisplayApp/appsettings.json
+++ b/DisplayApp/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=.; database = DisplayAppDb; trustServerCertificate=true; Trusted_Connection = true"
+  },
   "AllowedHosts": "*",
   "UserCredentials": [
     {
